--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       gtag('config', 'G-QS75JHDCCJ');
     </script>
     <!-- end Google tag -->
-  <!-- https://github.com/mulchcancer/mulch_center.git -->
+  <!-- git remote add origin https://github.com/mulchcancer/mulch_center.git -->
   <!--favicon-->
         <!--
   SITE FAVICONS
@@ -111,7 +111,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#">
+              <a class="nav-link" href="/index.html#interest">
                 <div class="parent-icon"><i class="material-icons-outlined">photo_camera</i>
                 </div>
                 <div class="menu-title">Interests</div>
@@ -553,7 +553,7 @@
 
 
       <!--start -->
-      <section class="py-5" id="">
+      <section class="py-5" id="interest">
         <div class="container py-4 px-4 px-lg-0">
           <div class="section-title text-center mb-5">
             <h1 class="mb-0 section-title-name">This Is The Problem We Are Interested In.</h1>
