--- a/index.html
+++ b/index.html
@@ -600,15 +600,12 @@
                 </a>
               </div>
             </div>
+            
             <div class="col">
               <div class="inner">
-                <a href="/assets/page/mulch_center_Fugitive_Emissions.html" class="glightbox">
-                  <div class="ratio ratio-16x9 d-flex justify-content-center my-4">
-                      <video class="img-fluid rounded" autoplay="" loop="" muted="" playsinline="" preload="auto">
-                          <source src="/assets/images/video/mulch_center_pollution480p_500kbps.mp4" type="video/webm">
-                          Your browser does not support videos
-                      </video>
-                  </div>
+                <a href="/assets/page/mulch_center_references.html" class="glightbox">
+                  <img src="/assets/images/gallery/mulch_center_polluting_neighborhood.webp" class="img-fluid rounded-4 p-1 bg-grd-success"
+                    alt="Wood Dust Being Released into the neighborhoods">
                 </a>
               </div>
             </div>
@@ -636,6 +633,18 @@
             <p class="mb-0"> <a href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
           </div>
         </div>
+        <div class="col">
+              <div class="inner">
+                <a href="/assets/page/mulch_center_Fugitive_Emissions.html" class="glightbox">
+                  <div class="ratio ratio-16x9 d-flex justify-content-center my-4">
+                      <video class="img-fluid rounded" autoplay="" loop="" muted="" playsinline="" preload="auto">
+                          <source src="/assets/images/video/mulch_center_pollution480p_500kbps.mp4" type="video/webm">
+                          Your browser does not support videos
+                      </video>
+                  </div>
+                </a>
+              </div>
+            </div>
       </div><!--end row-->
     </div>
   </section>
