--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   SITE FAVICONS
   -->
 
-  <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg" />
-  <link rel="shortcut icon" href="assets/favicon/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="MulchCancer" />
-  <link rel="manifest" href="assets/favicon/site.webmanifest" />
+  <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" >
+  <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg" >
+  <link rel="shortcut icon" href="assets/favicon/favicon.ico" >
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" >
+  <meta name="apple-mobile-web-app-title" content="MulchCancer" >
+  <link rel="manifest" href="assets/favicon/site.webmanifest" >
 
   <!-- loader-->
   <link href="assets/css/pace.min.css" rel="stylesheet">
@@ -292,7 +292,7 @@
               </div>
               <div class="mt-4">
                 <!-- <a href="javascript:;" class="btn btn-grd btn-grd-primary">Read More</a> -->
-                <a href="javascript:;"
+                <a href="/assets/page/mulch_center_wood_dust_carcinogenicity.html"
                   class="btn btn-grd btn-grd-primary rounded-5 d-flex align-items-center gap-2 raised px-4">
                   Read More<i class="material-icons-outlined">east</i>
                 </a>
@@ -383,7 +383,6 @@
                     </div>
                     <div class="">
                       <h5>Perimeter Air Monitoring</h5>
-                      <p class="mb-0">
                         <ul>
                           <li> 
                             <p class="mb-0">
@@ -402,7 +401,6 @@
                             </p>
                           </li>
                         </ul>
-                      </p>
                     </div>
                   </div>
                 </div>
@@ -447,7 +445,6 @@
                     </div>
                     <div class="">
                       <h5>Community Complaints & Surveys</h5>
-                      <p class="mb-0">
                         <ul>
                           <li>
                             <p  class="mb-0">
@@ -460,7 +457,6 @@
                           </p>
                           </li>
                         </ul>
-                      </p>
                     </div>
                   </div>
                 </div>
@@ -628,7 +624,7 @@
             <div class="footer-logo mb-4">
               <img src="assets/favicon/web-app-manifest-192x192.png" width="160" alt="Mulch Cancer Website">
             </div>
-            <p>You are Not Alone. If you or someone you love has been impacted, we invite you to connect with our community. Together, we can amplify voices, demand change, and build a future where no one faces this alone.</p>
+            <h5>You Are Not Alone</h5> <p>If you or someone you love has been impacted, we invite you to connect with our community. Together, we can amplify voices, demand change, and build a future where no one faces this alone.</p>
             <p class="mt-2 mb-2"> <a href="tel:+18722226442" class="contact-link">  +1872-222-6442 </a> </p>
             <p class="mb-0"> <a href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
           </div>
