--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
                 <div class="menu-title">Pages</div>
               </a>
-              <ul class="dropdown-menu" aria-labelledby="pagesDropdown" aria-labelledby="pagesDropdown">
+              <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
                 <li><a class="dropdown-item" href="/assets/page/mulch_center_audit.html"><i
                     class='material-icons-outlined'>checklist</i>Audit Checklist</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulch_center_Fugitive_Emissions.html"><i class='material-icons-outlined'>cloud_off</i>Fugitive Emissions</a></li>
