corrections new sitemap

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               </div>
             </div>
             <div class="col-12 col-xl-6 text-center">
-              <img src="/assets/images/arrows.svg" class="img-fluid" width="560" alt="">
+              <img src="/assets/images/gallery/arrows.svg" class="img-fluid" width="560" alt="">
             </div>
 
           </div><!--end row-->
@@ -529,11 +529,12 @@
 
 
       <!-- start call to action-->
-      <section class="py-5 bg-call-to-action">
+      <section class="py-5 bg-call-to-action hero-section">
+        <div class="section-overlay"></div>
         <div class="container py-4 px-4 px-lg-0">
-          <div class="text-center">
-            <h1 class="text-white">Support This Effort To Raise Awareness</h1>
-            <p class="mb-1 text-white">Every year, thousands are diagnosed with cancer—never knowing they’ve been exposed to a dangerous carcinogen. Our mission is to raise awareness, advocate for change, and support those affected. Whether you're newly diagnosed, seeking answers, or ready to help others—your voice matters.  
+          <div class="text-center bg-deep-blue bg-gradient">
+            <h1 class="text-white fw-bold fs-1">Support This Effort To Raise Awareness</h1>
+            <p class="mb-1 text-container text-white">Every year, thousands are diagnosed with cancer—never knowing they’ve been exposed to a dangerous carcinogen. Our mission is to raise awareness, advocate for change, and support those affected. Whether you're newly diagnosed, seeking answers, or ready to help others—your voice matters.  
             </p>
             <div class="mt-4">
               <a href="https://donate.stripe.com/28EfZ9dFb3FMglN9fb4AU00" class="btn btn-grd btn-lg btn-grd-primary rounded-5 px-4 raised" target="_blank" rel="noopener noreferrer">Donate Securely via Stripe</a>
@@ -605,6 +606,13 @@
         </div>
 
       </section>
+      <!--
+      START TO THE HEALTH RISKS SECTION -->
+
+              <div class="ratio d-none d-md-block overflow: auto container-fluid custom-ratio">
+                <iframe src="/assets/page/mulch_center_health_risks-.html" allowfullscreen></iframe>
+              </div>
+      <!--END OF HEALTH RISKS SECTION-->
       <!--end -->
     </div>
   </main>
