--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                 </a>
               </div>
             </div>
-            <div class="col-12 col-xl-6 text-center">
-              <img src="/assets/images/gallery/arrows.svg" class="img-fluid" width="560" alt="">
+            <div class="col-12 col-xl-6">
+              <img src="/assets/images/gallery/arrows.svg" class="img-fluid" alt="Mulch Centers releaase wood dust into the air and we breath the cancer producing wood dust">
             </div>
 
           </div><!--end row-->
