--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
       gtag('config', 'G-QS75JHDCCJ');
     </script>
     <!-- end Google tag -->
-  <!-- git remote add origin https://github.com/mulchcancer/mulch_center.git -->
-  <!--favicon-->
-        <!--
-  SITE FAVICONS
-  -->
+
+    <!-- CANONICAL -->
+  <link rel="canonical" href="https://mulchcancer.com/index.html">
+
+                              <!--   SITE FAVICONS  -->  <!-- git remote add origin https://github.com/mulchcancer/mulch_center.git -->
+  
+        
 
   <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" >
   <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" >
