--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           "@type": "DonateAction",
           "target": {
             "@type": "EntryPoint",
-            "urlTemplate": "https://mulchcancer.com/donate"
+            "urlTemplate": "https://donate.stripe.com/28EfZ9dFb3FMglN9fb4AU00"
           }
-        },
+        },  
         "hasPart": [
           {
             "@type": "SiteNavigationElement",
@@ -144,12 +144,12 @@
   <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
   <!--main css-->
   <link href="/assets/css/bootstrap-extended.css" rel="stylesheet">
-  <link href="sass/main.css" rel="stylesheet">
+  <link href="/sass/main.css" rel="stylesheet">
   <link href="/assets/css/horizontal-menu.css" rel="stylesheet">
-  <link href="sass/dark-theme.css" rel="stylesheet">
-  <link href="sass/semi-dark.css" rel="stylesheet">
-  <link href="sass/blue-theme.css" rel="stylesheet">
-  <link href="sass/bordered-theme.css" rel="stylesheet">
+  <link href="/sass/dark-theme.css" rel="stylesheet">
+  <link href="/sass/semi-dark.css" rel="stylesheet">
+  <link href="/sass/blue-theme.css" rel="stylesheet">
+  <link href="/sass/bordered-theme.css" rel="stylesheet">
   <!--mulch css-->
   <link href="/assets/css/mulch.css" rel="stylesheet">
 </head>
