--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
       <section class="py-5" id="interest">
         <div class="container py-4 px-4 px-lg-0">
           <div class="section-title text-center mb-5">
-            <h1 class="mb-0 section-title-name">This Is The Problem We Are Interested In.</h1>
+            <h1 class="mb-0 section-title-name">This Is The Problem.</h1>
           </div>
 
           <div class="row row-cols-1 row-cols-lg-3 g-4">
