--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="offcanvas-body p-0 primary-menu">
           <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
             <li class="nav-item">
-              <a class="nav-link" href="/assets/page/es/mulchcenter_audit.html">
+              <a class="nav-link" href="/assets/page/es/index.html">
                 <div class="parent-icon"><i class="material-icons-outlined">language</i>
                 </div>
                 <div class="menu-title">Español</div>
