modified main manu

--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
                     class='material-icons-outlined'>sick</i>Health Risks</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_wood-dust-summary.html"><i
                     class='material-icons-outlined'>construction</i>Practical Controls</a></li>
+                <li><a class="dropdown-item" href="/assets/page/mulchcenter_persistent_risk.html"><i
+                    class='material-icons-outlined'>person_alert</i>Persistent Risk</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_references.html"><i
                     class='material-icons-outlined'>menu_book</i>References</a></li>
               </ul>
