Public Health Awareness

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Mulch Cancer | Neighbors are inadvertently breathing carcinogenic dust from mulch centers">
 
-  <title>Mulch Cancer | Red Flag</title>
+  <title>Mulch Cancer | Public Health Awareness</title>
   
    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QS75JHDCCJ"></script>
