--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Mulch Cancer | Neighbors are inadvertently breathing carcinogenic dust from mulch centers">
+  <meta name="description" content="Educational Site | Neighbors are inadvertently breathing carcinogenic dust from mulch centers">
+  <meta name="keywords" content="mulch, cancer, wood dust, IARC, environmental justice">
 
   <title>Mulch Cancer | Public Health Awareness</title>
   
