--- a/index.html
+++ b/index.html
@@ -760,6 +760,73 @@
   </section>
   <!--end footer section-->
 
+  <!--start footer strip for links-->
+   <footer class="footer-strip py-3 px-4 px-lg-0 text-center border-top">
+    <div class="container">
+      <div class="row gy-4">
+        <div class="col-lg-4 col-md-6 footer-about">
+          <a href="/index.html" class="logo d-flex align-items-center">
+            <span class="sitename">MulchCancer.com</span>
+          </a>
+          <div class="footer-contact pt-3">
+            <p class="mt-3"><strong>Phone:</strong> <span>+1 872 222 6442</span></p>
+            <p><strong>Email:</strong> <span>contact@mulchcancer.com</span></p>
+          </div>
+          <div class="social-links d-flex mt-4">
+            <a href="https://twitter.com/mulchcancer"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/mulchcancer"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/mulchcancer"><i class="bi bi-instagram"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="/index.html#home">Home</a></li>
+            <li><a href="/index.html#About">About us</a></li>
+            <li><a href="/index.html#Services">Exposure</a></li>
+            <li><a href="/index.html#interest">Interest</a></li>
+            <li><a href="https://donate.stripe.com/28EfZ9dFb3FMglN9fb4AU00">Donations</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Community Health</h4>
+          <ul>
+            <li><a href="/assets/page/mulchcenter_persistent_risk.html">Persistence of Risk</a></li>
+            <li><a href="/assets/page/mulchcenter_wood-dust-summary.html">Practical Controls</a></li>
+            <li><a href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html">Health Risks</a></li>
+            <li><a href="/assets/page/mulchcenter_Particulates.html">Airborne Particulates</a></li>
+            <li><a href="/assets/page/mulchcenter_occupational.html">Health Standards</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Carcinogenicity</h4>
+          <ul>
+            <li><a href="/assets/page/mulchcenter_audit.html">Audit Checklist</a></li>
+            <li><a href="/assets/page/mulchcenter_wood-dust-summary.html#standards">Regulatory standards</a></li>
+            <li><a href="/assets/page/mulchcenter_occupational.html#mechanismOf">Mechanisms of Carcinogenicity</a></li>
+            <li><a href="/assets/page/mulchcenter_occupational.html#woodCarcinogen">Carcinogenicity of Wood Dust</a></li>
+            <li><a href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_impacts">Vulnerable Populations</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Legislation</h4>
+          <ul>
+            <li><a href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_regulatory">Legal Avenues</a></li>
+            <li><a href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_community_health">Protecting Community Health</a></li>
+            <li><a href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_Recommendations">Community Engagement</a></li>
+            <li><a href="/assets/page/mulchcenter_audit.htmlmonitoringHouseholds">Monitoring Neighboring Household Exposure</a></li>
+            <li><a href="/assets/page/mulchcenter_references.html">References</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+  <!--end footer strip for links-->
 
   <!--start footer strip-->
    <footer class="footer-strip py-3 px-4 px-lg-0 text-center border-top">
