--- a/index.html
+++ b/index.html
@@ -762,12 +762,17 @@
 
   <!--start footer strip for links-->
    <footer class="footer-strip py-3 px-4 px-lg-0 text-center border-top">
-    <div class="container">
+    <div class="navbar navbar-expand-xl align-items-center gap-3 container px-4 px-lg-0">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="/index.html" class="logo d-flex align-items-center">
-            <span class="sitename">MulchCancer.com</span>
-          </a>
+	   <a href="/index.html" class="logo-header d-none d-xl-flex align-items-center gap-2">
+		<div class="logo-icon">
+		   <img src="/logo.svg" class="logo-img" width="45" alt="Mulch Cancer Awareness">
+		</div>
+		<div class="logo-name">
+		  <h5 class="mb-0">Mulch Cancer</h5>
+		</div>
+		</a>
           <div class="footer-contact pt-3">
             <p class="mt-3"><strong>Phone:</strong> <span>+1 872 222 6442</span></p>
             <p><strong>Email:</strong> <span>contact@mulchcancer.com</span></p>
@@ -781,45 +786,45 @@
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
-          <ul>
-            <li><a href="/index.html#home">Home</a></li>
-            <li><a href="/index.html#About">About us</a></li>
-            <li><a href="/index.html#Services">Exposure</a></li>
-            <li><a href="/index.html#interest">Interest</a></li>
-            <li><a href="https://donate.stripe.com/28EfZ9dFb3FMglN9fb4AU00">Donations</a></li>
+          <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
+            <li class="nav-item"><a class="nav-link" href="/index.html#home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/index.html#About">About us</a></li>
+            <li class="nav-item"><a class="nav-link" href="/index.html#Services">Exposure</a></li>
+            <li class="nav-item"><a class="nav-link" href="/index.html#interest">Interest</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://donate.stripe.com/28EfZ9dFb3FMglN9fb4AU00">Donations</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Community Health</h4>
-          <ul>
-            <li><a href="/assets/page/mulchcenter_persistent_risk.html">Persistence of Risk</a></li>
-            <li><a href="/assets/page/mulchcenter_wood-dust-summary.html">Practical Controls</a></li>
-            <li><a href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html">Health Risks</a></li>
-            <li><a href="/assets/page/mulchcenter_Particulates.html">Airborne Particulates</a></li>
+          <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_persistent_risk.html">Persistence of Risk</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood-dust-summary.html">Practical Controls</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html">Health Risks</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Particulates.html">Airborne Particulates</a></li>
             <li><a href="/assets/page/mulchcenter_occupational.html">Health Standards</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Carcinogenicity</h4>
-          <ul>
-            <li><a href="/assets/page/mulchcenter_audit.html">Audit Checklist</a></li>
-            <li><a href="/assets/page/mulchcenter_wood-dust-summary.html#standards">Regulatory standards</a></li>
-            <li><a href="/assets/page/mulchcenter_occupational.html#mechanismOf">Mechanisms of Carcinogenicity</a></li>
-            <li><a href="/assets/page/mulchcenter_occupational.html#woodCarcinogen">Carcinogenicity of Wood Dust</a></li>
-            <li><a href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_impacts">Vulnerable Populations</a></li>
+          <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_audit.html">Audit Checklist</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood-dust-summary.html#standards">Regulatory standards</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_occupational.html#mechanismOf">Mechanisms of Carcinogenicity</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_occupational.html#woodCarcinogen">Carcinogenicity of Wood Dust</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_impacts">Vulnerable Populations</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Legislation</h4>
-          <ul>
-            <li><a href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_regulatory">Legal Avenues</a></li>
-            <li><a href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_community_health">Protecting Community Health</a></li>
-            <li><a href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_Recommendations">Community Engagement</a></li>
-            <li><a href="/assets/page/mulchcenter_audit.htmlmonitoringHouseholds">Monitoring Neighboring Household Exposure</a></li>
-            <li><a href="/assets/page/mulchcenter_references.html">References</a></li>
+          <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_regulatory">Legal Avenues</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_community_health">Protecting Community Health</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_Recommendations">Community Engagement</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_audit.htmlmonitoringHouseholds">Monitoring Neighboring Household Exposure</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_references.html">References</a></li>
           </ul>
         </div>
 
