romoved footer navbar class

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
 
   <!--start footer strip for links-->
    <footer class="footer-strip py-3 px-4 px-lg-0 text-center border-top">
-    <div class="navbar navbar-expand-xl align-items-center gap-3 container px-4 px-lg-0">
+    <div class="navbar-expand-xl align-items-center gap-3 container px-4 px-lg-0">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
 	   <a href="/index.html" class="logo-header d-none d-xl-flex align-items-center gap-2">
