--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
 		  <h5 class="mb-0">Mulch Cancer</h5>
 		</div>
 		</a>
-          <div class="footer-contact pt-3">
+          <div class="pt-3">
             <p class="mt-3"><strong>Phone:</strong> <span>+1 872 222 6442</span></p>
             <p><strong>Email:</strong> <span>contact@mulchcancer.com</span></p>
           </div>
@@ -785,7 +785,7 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h6>Useful Links</h6>
           <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
             <li class="nav-item"><a class="nav-link" href="/index.html#home">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/index.html#About">About us</a></li>
@@ -796,7 +796,7 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Community Health</h4>
+          <h6>Community Health</h6>
           <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_persistent_risk.html">Persistence of Risk</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood-dust-summary.html">Practical Controls</a></li>
@@ -807,7 +807,7 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Carcinogenicity</h4>
+          <h6>Carcinogenicity</h6>
           <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_audit.html">Audit Checklist</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood-dust-summary.html#standards">Regulatory standards</a></li>
@@ -818,7 +818,7 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Legislation</h4>
+          <h6>Legislation</h6>
           <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_regulatory">Legal Avenues</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_community_health">Protecting Community Health</a></li>
