--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood-dust-summary.html">Practical Controls</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html">Health Risks</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Particulates.html">Airborne Particulates</a></li>
-            <li><a href="/assets/page/mulchcenter_occupational.html">Health Standards</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_occupational.html">Health Standards</a></li>
           </ul>
         </div>
 
