--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
   <!--end footer section-->
 
   <!--start footer strip for links-->
-   <footer class="footer-strip py-3 px-4 px-lg-0 text-center border-top">
+   <footer class="footer-strip py-3 px-4 px-lg-0 border-top">
     <div class="gap-3 container px-4 px-lg-0">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
@@ -774,8 +774,8 @@
 		</div>
 		</a>
           <div class="pt-3">
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 872 222 6442</span></p>
-            <p><strong>Email:</strong> <span>contact@mulchcancer.com</span></p>
+            <p class="mt-2 mb-2"> <a href="tel:+18722226442" class="contact-link">  +1872-222-6442 </a> </p>
+            <p class="mb-0"> <a href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="https://twitter.com/mulchcancer"><i class="bi bi-twitter-x"></i></a>
@@ -786,7 +786,7 @@
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h6>Useful Links</h6>
-          <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
+          <ul class="navbar-nav mx-auto gap-0 gap-xl-1">
             <li class="nav-item"><a class="nav-link" href="/index.html#home">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/index.html#About">About us</a></li>
             <li class="nav-item"><a class="nav-link" href="/index.html#Services">Exposure</a></li>
@@ -797,7 +797,7 @@
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h6>Community Health</h6>
-          <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
+          <ul class="navbar-nav mx-auto gap-0 gap-xl-1">
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_persistent_risk.html">Persistence of Risk</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood-dust-summary.html">Practical Controls</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html">Health Risks</a></li>
@@ -808,7 +808,7 @@
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h6>Carcinogenicity</h6>
-          <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
+          <ul class="navbar-nav mx-auto gap-0 gap-xl-1">
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_audit.html">Audit Checklist</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_wood-dust-summary.html#standards">Regulatory standards</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_occupational.html#mechanismOf">Mechanisms of Carcinogenicity</a></li>
@@ -819,7 +819,7 @@
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h6>Legislation</h6>
-          <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
+          <ul class="navbar-nav mx-auto gap-0 gap-xl-1">
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_regulatory">Legal Avenues</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_community_health">Protecting Community Health</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_Recommendations">Community Engagement</a></li>
