--- a/index.html
+++ b/index.html
@@ -741,8 +741,8 @@
               <img src="/logo.svg" width="160" alt="Mulch Cancer Website">
             </div></a>
             <h5>You Are Not Alone</h5> <p>If you or someone you love has been impacted, we invite you to connect with our community. Together, we can amplify voices, demand change, and build a future where no one faces this alone.</p>
-            <p class="mt-2 mb-2"> <a href="tel:+18722226442" class="contact-link">  +1872-222-6442 </a> </p>
-            <p class="mb-0"> <a href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
+            <p class="navbar-nav mt-2 mb-2"> <a href="tel:+18722226442" class="nav-link contact-link">  +1872-222-6442 </a> </p>
+            <p class="navbar-nav mb-0"> <a class="nav-link" href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
           </div>
         </div>
         <div class="col">
@@ -773,14 +773,14 @@
 		  <h5 class="mb-0">Mulch Cancer</h5>
 		</div>
 		</a>
-          <div class="pt-3">
-            <p class="mt-2 mb-2"> <a href="tel:+18722226442" class="contact-link">  +1872-222-6442 </a> </p>
-            <p class="mb-0"> <a href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
+          <div class="navbar-nav pt-3">
+            <p class="navbar-nav mt-2 mb-2"> <a href="tel:+18722226442" class="nav-link contact-link">  +1872-222-6442 </a> </p>
+            <p class="navbar-nav mb-0"> <a class="nav-link" href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href="https://twitter.com/mulchcancer"><i class="bi bi-twitter-x"></i></a>
-            <a href="https://www.facebook.com/mulchcancer"><i class="bi bi-facebook"></i></a>
-            <a href="https://www.instagram.com/mulchcancer"><i class="bi bi-instagram"></i></a>
+            <a href="https://twitter.com/mulchcancer"><i class="bi bi-twitter-x mx-auto"></i></a>
+            <a href="https://www.facebook.com/mulchcancer"><i class="bi bi-facebook mx-auto"></i></a>
+            <a href="https://www.instagram.com/mulchcancer"><i class="bi bi-instagram mx-auto"></i></a>
           </div>
         </div>
 
@@ -821,9 +821,9 @@
           <h6>Legislation</h6>
           <ul class="navbar-nav mx-auto gap-0 gap-xl-1">
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_regulatory">Legal Avenues</a></li>
-            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_community_health">Protecting Community Health</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_community_health">Community Health</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_Fugitive_Emissions.html#mulchcenter_Recommendations">Community Engagement</a></li>
-            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_audit.htmlmonitoringHouseholds">Monitoring Neighboring Household Exposure</a></li>
+            <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_audit.htmlmonitoringHouseholds">Monitoring Household Exposure</a></li>
             <li class="nav-item"><a class="nav-link" href="/assets/page/mulchcenter_references.html">References</a></li>
           </ul>
         </div>
