--- a/index.html
+++ b/index.html
@@ -741,8 +741,8 @@
               <img src="/logo.svg" width="160" alt="Mulch Cancer Website">
             </div></a>
             <h5>You Are Not Alone</h5> <p>If you or someone you love has been impacted, we invite you to connect with our community. Together, we can amplify voices, demand change, and build a future where no one faces this alone.</p>
-            <p class="navbar-nav mt-2 mb-2"> <a href="tel:+18722226442" class="nav-link contact-link">  +1872-222-6442 </a> </p>
-            <p class="navbar-nav mb-0"> <a class="nav-link" href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
+            <p class="navbar-nav mt-2 mb-2"><strong>Phone:</strong> <a href="tel:+18722226442" class="nav-link contact-link">  +1872-222-6442 </a> </p>
+            <p class="navbar-nav mb-0"><strong>Email:</strong> <a class="nav-link" href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
           </div>
         </div>
         <div class="col">
@@ -774,8 +774,8 @@
 		</div>
 		</a>
           <div class="navbar-nav pt-3">
-            <p class="navbar-nav mt-2 mb-2"> <a href="tel:+18722226442" class="nav-link contact-link">  +1872-222-6442 </a> </p>
-            <p class="navbar-nav mb-0"> <a class="nav-link" href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
+            <p class="navbar-nav mt-2 mb-2"><strong>Phone:</strong> <a href="tel:+18722226442" class="nav-link contact-link">  +1872-222-6442 </a> </p>
+            <p class="navbar-nav mb-0"><strong>Email:</strong> <a class="nav-link" href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="https://twitter.com/mulchcancer"><i class="bi bi-twitter-x mx-auto"></i></a>
