--- a/index.html
+++ b/index.html
@@ -778,9 +778,9 @@
             <p class="navbar-nav mb-0"><strong>Email:</strong> <a class="nav-link" href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href="https://twitter.com/mulchcancer"><i class="bi bi-twitter-x mx-auto"></i></a>
-            <a href="https://www.facebook.com/mulchcancer"><i class="bi bi-facebook mx-auto"></i></a>
-            <a href="https://www.instagram.com/mulchcancer"><i class="bi bi-instagram mx-auto"></i></a>
+            <a class="nav-link" href="https://twitter.com/mulchcancer"><i class="bi bi-twitter-x mx-auto"></i></a>
+            <a class="nav-link" href="https://www.facebook.com/mulchcancer"><i class="bi bi-facebook mx-auto"></i></a>
+            <a class="nav-link" href="https://www.instagram.com/mulchcancer"><i class="bi bi-instagram mx-auto"></i></a>
           </div>
         </div>
 
