--- a/index.html
+++ b/index.html
@@ -777,10 +777,10 @@
             <p class="navbar-nav mt-2 mb-2"><strong>Phone:</strong> <a href="tel:+18722226442" class="nav-link contact-link">  +1872-222-6442 </a> </p>
             <p class="navbar-nav mb-0"><strong>Email:</strong> <a class="nav-link" href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">contact@mulchcancer.com</a></p>
           </div>
-          <div class="social-links d-flex mt-4">
-            <a class="nav-link" href="https://twitter.com/mulchcancer"><i class="bi bi-twitter-x mx-auto"></i></a>
-            <a class="nav-link" href="https://www.facebook.com/mulchcancer"><i class="bi bi-facebook mx-auto"></i></a>
-            <a class="nav-link" href="https://www.instagram.com/mulchcancer"><i class="bi bi-instagram mx-auto"></i></a>
+          <div class="social-links d-flex mt-2">
+            <a class="nav-link" href="https://twitter.com/mulchcancer"><i class="bi bi-twitter-x me-3"></i></a>
+            <a class="nav-link" href="https://www.facebook.com/mulchcancer"><i class="bi bi-facebook me-3"></i></a>
+            <a class="nav-link" href="https://www.instagram.com/mulchcancer"><i class="bi bi-instagram me-3"></i></a>
           </div>
         </div>
 
