--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
   <meta name="apple-mobile-web-app-title" content="MulchCancer" >
   <link rel="manifest" href="/assets/favicon/site.webmanifest" >
 
-  <!-- loader-->
+  <!--  defer loader-->
   <link href="/assets/css/pace.min.css" rel="stylesheet">
-  <script src="/assets/js/pace.min.js"></script>
+  <script src="/assets/js/pace.min.js" defer></script>
 
   <!--plugins-->
   <link href="/assets/plugins/OwlCarousel/css/owl.carousel.min.css" rel="stylesheet">
