--- a/index.html
+++ b/index.html
@@ -719,11 +719,11 @@
 
       </section>
       <!--
-      START TO THE HEALTH RISKS SECTION -->
+      START TO THE HEALTH RISKS SECTION
 
               <div class="ratio d-none d-md-block overflow: auto container-fluid custom-ratio">
                 <iframe src="/assets/page/mulchcenter_health_risks-.html" allowfullscreen></iframe>
-              </div>
+              </div> -->
       <!--END OF HEALTH RISKS SECTION-->
       <!--end -->
     </div>
