--- a/index.html
+++ b/index.html
@@ -109,7 +109,13 @@
 <link href="/assets/css/pace.min.css" rel="stylesheet" media="print" onload="this.media='all'">
 <noscript><link href="/assets/css/pace.min.css" rel="stylesheet"></noscript>
 <script src="/assets/js/pace.min.js" defer></script>  
- <!--plugins-->
+ 
+<!-- Plugins (defer load if not critical) -->
+<link href="/assets/plugins/OwlCarousel/css/owl.carousel.min.css" rel="stylesheet" media="print" onload="this.media='all'">
+<noscript><link href="/assets/plugins/OwlCarousel/css/owl.carousel.min.css" rel="stylesheet"></noscript>
+
+<link href="/assets/plugins/lightbox/dist/css/glightbox.min.css" rel="stylesheet" media="print" onload="this.media='all'">
+<noscript><link href="/assets/plugins/lightbox/dist/css/glightbox.min.css" rel="stylesheet"></noscript>
   
   
   <!--bootstrap css-->
