--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <noscript><link href="/assets/css/pace.min.css" rel="stylesheet"></noscript>
 <script src="/assets/js/pace.min.js" defer></script>  
  
-<!-- Plugins (defer load if not critical) -->
+<!-- Plugins DO NOT DEFER, it is important -->
 <link href="/assets/plugins/OwlCarousel/css/owl.carousel.min.css" rel="stylesheet">
 
 
@@ -905,7 +905,8 @@
 
 <!-- Bootstrap JS (includes Popper) -->
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
-<!-- Plugins -->
+
+<!-- Plugins this is important, do not defer -->
 <script src="/assets/plugins/OwlCarousel/js/owl.carousel.min.js"></script>
 <script src="/assets/plugins/OwlCarousel/js/owl.carousel2.thumbs.min.js"></script>
 <script src="/assets/plugins/lightbox/dist/js/glightbox.min.js"></script>
