--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
   <meta name="apple-mobile-web-app-title" content="MulchCancer" >
   <link rel="manifest" href="/assets/favicon/site.webmanifest" >
 
+    <!-- Preconnect & Preload Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600&family=Material+Icons+Outlined&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+
   <!-- Pace loader (deferred) -->
 <link rel="preload" as="style" href="/assets/css/pace.min.css">
 <link href="/assets/css/pace.min.css" rel="stylesheet" media="print" onload="this.media='all'">
@@ -133,7 +139,7 @@
   <link href="/assets/css/mulch.css" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/social_icons.css">
 <!-- Fonts in single request -->
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600&family=Material+Icons+Outlined&display=swap" rel="stylesheet">
+
 
 </head>
 
