--- a/index.html
+++ b/index.html
@@ -96,18 +96,17 @@
 }
 </script>
 
-                              <!--   SITE FAVICONS  -->
-  <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" >
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" >
-  <link rel="shortcut icon" href="/assets/favicon/favicon.ico" >
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" >
-  <meta name="apple-mobile-web-app-title" content="MulchCancer" >
-  <link rel="manifest" href="/assets/favicon/site.webmanifest" >
+                          <!--   SITE FAVICONS  -->
+<link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" >
+<link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" >
+<link rel="shortcut icon" href="/assets/favicon/favicon.ico" >
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" >
+<meta name="apple-mobile-web-app-title" content="MulchCancer" >
+<link rel="manifest" href="/assets/favicon/site.webmanifest" >
 
     <!-- Preconnect & Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600&family=Material+Icons+Outlined&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
 
   <!-- Pace loader (deferred) -->
@@ -118,28 +117,21 @@
  
 <!-- Plugins DO NOT DEFER, it is important -->
 <link href="/assets/plugins/OwlCarousel/css/owl.carousel.min.css" rel="stylesheet">
-
-
-
 <link href="/assets/plugins/lightbox/dist/css/glightbox.min.css" rel="stylesheet">
-
   
-  
-  <!--bootstrap css-->
-  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-  <!--main css-->
-  <link href="/assets/css/bootstrap-extended.css" rel="stylesheet">
-  <link href="/sass/main.css" rel="stylesheet">
-  <link href="/assets/css/horizontal-menu.css" rel="stylesheet">
-  <link href="/sass/dark-theme.css" rel="stylesheet">
-  <link href="/sass/semi-dark.css" rel="stylesheet">
-  <link href="/sass/blue-theme.css" rel="stylesheet">
-  <link href="/sass/bordered-theme.css" rel="stylesheet">
-  <!--mulch css-->
-  <link href="/assets/css/mulch.css" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/social_icons.css">
-<!-- Fonts in single request -->
-
+<!--bootstrap css-->
+<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+<!--main css-->
+<link href="/assets/css/bootstrap-extended.css" rel="stylesheet">
+<link href="/sass/main.css" rel="stylesheet">
+<link href="/assets/css/horizontal-menu.css" rel="stylesheet">
+<link href="/sass/dark-theme.css" rel="stylesheet">
+<link href="/sass/semi-dark.css" rel="stylesheet">
+<link href="/sass/blue-theme.css" rel="stylesheet">
+<link href="/sass/bordered-theme.css" rel="stylesheet">
+<!--mulch css-->
+<link href="/assets/css/mulch.css" rel="stylesheet">
+<link rel="stylesheet" href="/assets/css/social_icons.css">
 
 </head>
 
@@ -904,22 +896,25 @@
       </div>
     </div>
   </div>
-  <!--start switcher-->
 
-<!-- jQuery (must load before OwlCarousel) -->
-<script src="/assets/js/jquery.min.js"></script>
+  <!--start switcher-->
 
 <!-- Bootstrap JS (includes Popper) -->
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
 
+<!-- Your scripts -->
+<script src="/assets/js/mulch.js"></script>
+
+<!-- Plugins -->
+<!-- jQuery (must load before OwlCarousel) -->
+<script src="/assets/js/jquery.min.js"></script>
 <!-- Plugins this is important, do not defer -->
 <script src="/assets/plugins/OwlCarousel/js/owl.carousel.min.js"></script>
 <script src="/assets/plugins/OwlCarousel/js/owl.carousel2.thumbs.min.js"></script>
+<script src="/assets/js/main.js"></script>
+
 <script src="/assets/plugins/lightbox/dist/js/glightbox.min.js"></script>
 
-<!-- Your scripts -->
-<script src="/assets/js/main.js"></script>
-<script src="/assets/js/mulch.js"></script>
   
   <script>
     var lightbox = GLightbox();
