--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
     <!-- Preconnect & Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600&family=Material+Icons+Outlined&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+<link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
+<link href="/assets/css/fonts.css" rel="stylesheet"><link href="/assets/css/fonts.css" rel="stylesheet">
 
   <!-- Pace loader (deferred) -->
 <link rel="preload" as="style" href="/assets/css/pace.min.css">
