--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
-<link href="/assets/css/fonts.css" rel="stylesheet"><link href="/assets/css/fonts.css" rel="stylesheet">
+<link href="/assets/css/fonts.css" rel="stylesheet">
 
   <!-- Pace loader (deferred) -->
 <link rel="preload" as="style" href="/assets/css/pace.min.css">
