--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- Preconnect & Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
+<link rel="stylesheet" href="/assets/css/LineIcons.css">
 <link href="/assets/css/fonts.css" rel="stylesheet">
 
   <!-- Pace loader (deferred) -->
@@ -152,7 +152,7 @@
 		</a>
       </div>
       <div class="btn-toggle d-xl-none" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
-        <a href="javascript:;"><i class="material-icons-outlined">menu</i></a>
+        <a href="javascript:;"><i class="lni lni-menu"></i></a>
       </div>
 
       <div class="offcanvas offcanvas-start w-260" tabindex="-1" id="offcanvasNavbar">
@@ -167,84 +167,84 @@
             </div>
           </div></a>
           <a href="javascript:;" class="primaery-menu-close" data-bs-dismiss="offcanvas">
-            <i class="material-icons-outlined">close</i>
+            <i class="lni lni-close"></i>
           </a>
         </div>
         <div class="offcanvas-body p-0 primary-menu">
           <ul class="navbar-nav align-items-center mx-auto gap-0 gap-xl-1">
             <li class="nav-item">
               <a class="nav-link" href="/assets/page/es/index.html" aria-label="Ver el sitio en Español">
-                <div class="parent-icon"><i class="material-icons-outlined">language</i>
+                <div class="parent-icon"><i class="lni lni-world"></i>
                 </div>
                 <div class="menu-title">Español</div>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/index.html#home">
-                <div class="parent-icon"><i class="material-icons-outlined">home</i>
+                <div class="parent-icon"><i class="lni lni-home"></i>
                 </div>
                 <div class="menu-title">Home</div>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/index.html#About">
-                <div class="parent-icon"><i class="material-icons-outlined">info</i>
+                <div class="parent-icon"><i class="lni lni-information"></i>
                 </div>
                 <div class="menu-title">About</div>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/index.html#Services">
-                <div class="parent-icon"><i class="material-icons-outlined">work_outline</i>
+                <div class="parent-icon"><i class="lni lni-briefcase"></i>
                 </div>
                 <div class="menu-title">Exposure</div>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/index.html#interest">
-                <div class="parent-icon"><i class="material-icons-outlined">photo_camera</i>
+                <div class="parent-icon"><i class="lni lni-camera"></i>
                 </div>
                 <div class="menu-title">Interests</div>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://donate.stripe.com/28EfZ9dFb3FMglN9fb4AU00" target="_blank" rel="noopener noreferrer" title="Support">
-                <div class="parent-icon"><i class="material-icons-outlined">attach_money</i>
+                <div class="parent-icon"><i class="lni lni-dollar"></i>
                 </div>
                 <div class="menu-title">Donations</div>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="mailto:contact@mulchcancer.com" aria-label="Email Mulch Cancer">
-                <div class="parent-icon"><i class="material-icons-outlined">email</i>
+                <div class="parent-icon"><i class="lni lni-envelope"></i>
                 </div>
                 <div class="menu-title">Contact</div>
               </a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" href="#" data-bs-toggle="dropdown" id="pagesDropdown" role="button" aria-expanded="false">
-                <div class="parent-icon"><i class='material-icons-outlined'>task</i>
+                <div class="parent-icon"><i class="lni lni-checkmark-circle"></i>
                 </div>
                 <div class="menu-title">Pages</div>
               </a>
               <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_audit.html"><i
-                    class='material-icons-outlined'>checklist</i>Audit Checklist</a></li>
-                <li><a class="dropdown-item" href="/assets/page/mulchcenter_Fugitive_Emissions.html"><i class='material-icons-outlined'>cloud_off</i>Fugitive Emissions</a></li>
+                    class="lni lni-list"></i>Audit Checklist</a></li>
+                <li><a class="dropdown-item" href="/assets/page/mulchcenter_Fugitive_Emissions.html"><i class="lni lni-cloud-sync"></i>Fugitive Emissions</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_occupational.html"><i
-                    class='material-icons-outlined'>medical_services</i>Health Standards</a></li>
+                    class="lni lni-first-aid"></i></i>Health Standards</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_Particulates.html"><i
-                    class='material-icons-outlined'>air</i>Airborne Particulates</a></li>
+                    class="lni lni-wind"></i>Airborne Particulates</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html"><i
-                    class='material-icons-outlined'>sick</i>Health Risks</a></li>
+                    class="lni lni-cross-circle"></i>Health Risks</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_wood-dust-summary.html"><i
-                    class='material-icons-outlined'>construction</i>Practical Controls</a></li>
+                    class="lni lni-construction"></i>Practical Controls</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_health_risks.html"><i
-                    class='material-icons-outlined'>emoji_people</i>Community Risks</a></li>
+                    class="lni lni-user"></i>Community Risks</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_persistent_risk.html"><i
-                    class='material-icons-outlined'>priority_high</i>Persistent Risk</a></li>
+                    class="lni lni-warning"></i>Persistent Risk</a></li>
                 <li><a class="dropdown-item" href="/assets/page/mulchcenter_references.html"><i
-                    class='material-icons-outlined'>menu_book</i>References</a></li>
+                    class="lni lni-book"></i>References</a></li>
               </ul>
             </li>
           </ul>
@@ -270,10 +270,10 @@
               <div class="d-flex flex-column flex-lg-row align-items-center gap-3 mt-5">
                 <a href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html"
                   class="btn btn-lg btn-grd btn-grd-primary d-flex align-items-center rounded-5 gap-2 raised">
-                  <i class="material-icons-outlined">speed</i>Get Started
+                  <i class="lni lni-dashboard"></i>Get Started
                 </a>
                 <a href="/index.html#mulchcenter_pollution" class="btn btn-lg btn-light d-flex align-items-center rounded-5 gap-2 raised">
-                  <i class="material-icons-outlined">play_circle_outline</i>Watch Video
+                  <i class="lni lni-play"></i>Watch Video
                 </a>
               </div>
             </div>
@@ -289,7 +289,7 @@
                   <div class="d-flex align-items-start gap-3">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 btn-grd-info text-white flex-shrink-0">
-                      <i class="material-icons-outlined fs-2">emoji_events</i>
+                      <i class="lni lni-trophy fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Mulch Centers and Processing</h5>
@@ -305,7 +305,7 @@
                   <div class="d-flex align-items-start gap-3">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 btn-grd-danger text-white flex-shrink-0">
-                      <i class="material-icons-outlined fs-2">privacy_tip</i>
+                      <i class="lni lni-shield fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Organic Materials</h5>
@@ -321,7 +321,7 @@
                   <div class="d-flex align-items-start gap-3">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 btn-grd-success text-white flex-shrink-0">
-                      <i class="material-icons-outlined fs-2">try</i>
+                      <i class="lni lni-rocket fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Take Action</h5>
@@ -374,19 +374,19 @@
               <div class="d-flex flex-column gap-2">
                 <h3 class="d-flex align-items-start gap-3 mb-0">Bottom line</h3>
                 <p class="d-flex align-items-start gap-3 mb-0 fw-bolder"><i
-                    class="material-icons-outlined fs-5">check_circle</i>Wood dust is carcinogenic to humans (Group 1, IARC) — strong, consistent epidemiologic evidence links occupational exposure to wood dust with adenocarcinoma of the nasal cavities / paranasal sinuses</p>
+                    class="lni lni-checkmark-circle fs-5"></i>Wood dust is carcinogenic to humans (Group 1, IARC) — strong, consistent epidemiologic evidence links occupational exposure to wood dust with adenocarcinoma of the nasal cavities / paranasal sinuses</p>
                 <p class="d-flex align-items-start gap-3 mb-0 fw-bolder"><i
-                    class="material-icons-outlined fs-5">check_circle</i>Regulatory recognition: NTP and many agencies treat wood dust as a recognized human carcinogen and/or list it for special regulatory attention.</p>
+                    class="lni lni-checkmark-circle fs-5"></i>Regulatory recognition: NTP and many agencies treat wood dust as a recognized human carcinogen and/or list it for special regulatory attention.</p>
                 <p class="d-flex align-items-start gap-3 mb-0 fw-bolder"><i
-                    class="material-icons-outlined fs-5">check_circle</i>Contemporary exposure limits vary by jurisdiction.</p>
+                    class="lni lni-checkmark-circle fs-5"></i>Contemporary exposure limits vary by jurisdiction.</p>
                 <p class="d-flex align-items-start gap-3 mb-0 fw-bolder"><i
-                    class="material-icons-outlined fs-5">check_circle</i>OSHA guidance pages and its eTool recommend controls and caution that wood dust is a carcinogen.</p>
+                    class="lni lni-checkmark-circle fs-5"></i>OSHA guidance pages and its eTool recommend controls and caution that wood dust is a carcinogen.</p>
               </div>
               <div class="mt-4">
                 <!-- <a href="javascript:;" class="btn btn-grd btn-grd-primary">Read More</a> -->
                 <a href="/assets/page/mulchcenter_wood_dust_carcinogenicity.html"
                   class="btn btn-grd btn-grd-primary rounded-5 d-flex align-items-center gap-2 raised px-4">
-                  Read More<i class="material-icons-outlined">east</i>
+                  Read More<i class="lni lni-arrow-right"></i>
                 </a>
               </div>
             </div>
@@ -471,7 +471,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-primary text-white flex-shrink-0 mx-auto">
-                      <i class="material-icons-outlined fs-2">favorite_border</i>
+                      <i class="lni lni-heart fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Perimeter Air Monitoring</h5>
@@ -504,7 +504,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-danger text-white flex-shrink-0 mx-auto">
-                      <i class="material-icons-outlined fs-2">card_membership</i>
+                      <i class="lni lni-card fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Dust Deposition Gauges</h5>
@@ -531,7 +531,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-warning text-white flex-shrink-0 mx-auto">
-                      <i class="material-icons-outlined fs-2">language</i>
+                      <i class="lni lni-world fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Community Complaints & Surveys</h5>
@@ -558,7 +558,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-branding text-white flex-shrink-0 mx-auto">
-                      <i class="material-icons-outlined fs-2">account_balance</i>
+                      <i class="lni lni-bank fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Meteorological Tracking</h5>
@@ -578,7 +578,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-success text-white flex-shrink-0 mx-auto">
-                      <i class="material-icons-outlined fs-2">history</i>
+                      <i class="lni lni-timer fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Mitigation if Exposure Detected</h5>
@@ -601,7 +601,7 @@
                   <div class="d-flex flex-column gap-4">
                     <div
                       class="d-flex align-items-center justify-content-center rounded-circle wh-64 bg-grd-deep-blue text-white flex-shrink-0 mx-auto">
-                      <i class="material-icons-outlined fs-2">leaderboard</i>
+                      <i class="lni lni-bar-chart fs-2"></i>
                     </div>
                     <div class="">
                       <h5>Contact Your Representative</h5>
@@ -823,13 +823,13 @@
 
 
   <!--Start Back To Top Button-->
-     <a href="javaScript:;" class="back-to-top"><i class="material-icons-outlined">arrow_upward</i></a>
+     <a href="javaScript:;" class="back-to-top"><i class="lni lni-arrow-up"></i></a>
   <!--End Back To Top Button-->
 
   <!--start switcher-->
   <button class="btn btn-grd btn-grd-danger btn-switcher position-fixed top-50 d-flex align-items-center gap-2"
     type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop">
-    <i class="material-icons-outlined">tune</i>Customize
+    <i class="lni lni-sliders"></i>Customize
   </button>
 
   <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="staticBackdrop">
@@ -839,7 +839,7 @@
         <p class="mb-0">Customize your theme</p>
       </div>
       <a href="javascript:;" class="primaery-menu-close" data-bs-dismiss="offcanvas">
-        <i class="material-icons-outlined">close</i>
+        <i class="lni lni-close"></i>
       </a>
     </div>
     <div class="offcanvas-body">
@@ -852,7 +852,7 @@
             <label
               class="btn btn-outline-secondary d-flex flex-column gap-1 align-items-center justify-content-center p-4"
               for="BlueTheme">
-              <span class="material-icons-outlined">contactless</span>
+              <i class="lni lni-tap"></i>
               <span>Blue</span>
             </label>
           </div>
@@ -861,7 +861,7 @@
             <label
               class="btn btn-outline-secondary d-flex flex-column gap-1 align-items-center justify-content-center p-4"
               for="LightTheme">
-              <span class="material-icons-outlined">light_mode</span>
+              <i class="lni lni-sun"></i>
               <span>Light</span>
             </label>
           </div>
@@ -870,7 +870,7 @@
             <label
               class="btn btn-outline-secondary d-flex flex-column gap-1 align-items-center justify-content-center p-4"
               for="DarkTheme">
-              <span class="material-icons-outlined">dark_mode</span>
+              <i class="lni lni-night"></i>
               <span>Dark</span>
             </label>
           </div>
@@ -879,7 +879,7 @@
             <label
               class="btn btn-outline-secondary d-flex flex-column gap-1 align-items-center justify-content-center p-4"
               for="SemiDarkTheme">
-              <span class="material-icons-outlined">contrast</span>
+              <i class="lni lni-adjust"></i>
               <span>Semi Dark</span>
             </label>
           </div>
@@ -888,7 +888,7 @@
             <label
               class="btn btn-outline-secondary d-flex flex-column gap-1 align-items-center justify-content-center p-4"
               for="BoderedTheme">
-              <span class="material-icons-outlined">border_style</span>
+              <i class="lni lni-layout"></i>
               <span>Bordered</span>
             </label>
           </div>
